--- a/client/assets/stylesheets/_common.scss
+++ b/client/assets/stylesheets/_common.scss
@@ -26,7 +26,7 @@
 .form_heading {
     text-align: center;
     position: relative;
-    top: -90px;
+    top: -30px;
     font-size: 28px;
 }
 
@@ -49,24 +49,14 @@
 }
 
 
-.user_icon {
-    position: relative;
-    left: 50%;
-    top: -125px;
-    transform: translateX(-50%);
-    background-color: #fff;
-    
-    font-size: 70px;
-    padding: 10px;
-    border: 5px solid #333;
-    border-radius: 50%;
-    color: #333;
-}
 
 .submit_btn {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
+    margin-top: 15px;
+    width: 100%;
+    outline: 0;
+    border-width: 0;
+    background-color: $submitButtonBackground;
+    color: #fff;
 }
 
 .form_wrapper {
@@ -74,7 +64,26 @@
     top: 30%;
     right: 50%;
     transform: translateX(50%);
-    background-color: lightcyan;
-    padding: 75px 60px;
-    border-radius: 8px;
+    background: $formBackgroundColor;
+    padding: 50px 60px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #000000;
 }
+
+::placeholder { 
+    color: #000000;
+    font-weight: 400;
+    opacity: 1;
+  }
+  
+  :-ms-input-placeholder { 
+    color: #000000;
+    font-weight: 400;
+    opacity: 1;
+  }
+  
+  ::-ms-input-placeholder {
+    color: #000000;
+    font-weight: 400;
+    opacity: 1;
+  }
