--- a/client/assets/stylesheets/_common.scss
+++ b/client/assets/stylesheets/_common.scss
@@ -3,6 +3,12 @@
     margin: 0 auto;
 }
 
+.header {
+    height: 60px;
+    background-color: $headerBackground;
+}
+
+
 .header_flex {
     display: flex;
     justify-content: space-between;
@@ -21,69 +27,3 @@
     padding-top: 20px;
 }
 
-// Form
-
-.form_heading {
-    text-align: center;
-    position: relative;
-    top: -30px;
-    font-size: 28px;
-}
-
-.btn {
-    display: inline-block;
-    padding: 5px 15px;
-    border-radius: 3px;
-    outline: 0;
-    border-width: 0px;
-    color: midnightblue;
-    font-weight: bold;
-    background-color: #fff;
-}
-
-.logo {
-    color: blanchedalmond;
-    text-transform: uppercase;
-    font-size: 28px;
-    padding-top: 20px;
-}
-
-
-
-.submit_btn {
-    margin-top: 15px;
-    width: 100%;
-    outline: 0;
-    border-width: 0;
-    background-color: $submitButtonBackground;
-    color: #fff;
-}
-
-.form_wrapper {
-    position: absolute;
-    top: 30%;
-    right: 50%;
-    transform: translateX(50%);
-    background: $formBackgroundColor;
-    padding: 50px 60px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px #000000;
-}
-
-::placeholder { 
-    color: #000000;
-    font-weight: 400;
-    opacity: 1;
-  }
-  
-  :-ms-input-placeholder { 
-    color: #000000;
-    font-weight: 400;
-    opacity: 1;
-  }
-  
-  ::-ms-input-placeholder {
-    color: #000000;
-    font-weight: 400;
-    opacity: 1;
-  }
