--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Issues</title>
+    <title>Users</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Issues</h1>
-    <p>Welcome to Issues File</p>
+    <h1>User</h1>
+    <p>Welcome to User File</p>
   </body>
 </html>
