--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Issue Tracker</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
