add: AdminLogin.jsx

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Issue Tracker</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/static/bundle.css" />
   </head>
   <body>
     <div id="root"></div>
