--- a/client/assets/stylesheets/_common.scss
+++ b/client/assets/stylesheets/_common.scss
@@ -4,7 +4,6 @@
 }
 
 .header {
-    height: 60px;
     background-color: $headerBackground;
 }
 
@@ -15,8 +14,35 @@
     align-items: center;
 }
 
+.btn {
+    display: inline-block;
+    padding: 5px 15px;
+    border-radius: 3px;
+    outline: 0;
+    border-width: 0px;
+    color: midnightblue;
+    font-weight: bold;
+    background-color: #fff;
+}
+
+.logo {
+    color: blanchedalmond;
+    text-transform: uppercase;
+    font-size: 28px;
+    padding: 20px;
+}
+
+.heading {
+    text-align: center;
+    font-size: 25px;
+    padding: 20px 0;
+    // text-transform: uppercase;
+}
+
+
 .menu_flex {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -24,6 +50,26 @@
 .menu_items {
     margin-left: 40px;
     color: blanchedalmond;
-    padding-top: 20px;
+    padding: 20px;
+}
+
+
+.status_color_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.status_color {
+    padding: 5px 0px;
+    background-color: green;
+    flex-basis: 25%;
+    margin: 0 3px;
+}
+
+// Dropdown 
+
+#water_issue_toggle, #washing_issue_toggle, #electricity_issue_toggle, #food_issue_toggle {
+    display: none;
 }
 
