--- a/client/assets/stylesheets/_form.scss
+++ b/client/assets/stylesheets/_form.scss
@@ -21,26 +21,6 @@
     font-size: 28px;
 }
 
-.btn {
-    display: inline-block;
-    padding: 5px 15px;
-    border-radius: 3px;
-    outline: 0;
-    border-width: 0px;
-    color: midnightblue;
-    font-weight: bold;
-    background-color: #fff;
-}
-
-.logo {
-    color: blanchedalmond;
-    text-transform: uppercase;
-    font-size: 28px;
-    padding-top: 20px;
-}
-
-
-
 .submit_btn {
     padding: 8px 20px;
     border-radius: 4px;
@@ -65,8 +45,6 @@
     box-shadow: 2px 2px 10px #000000;
 }
 
-
-
 ::placeholder { 
     color: #000000;
     font-weight: 400;
@@ -85,14 +63,18 @@
     opacity: 1;
   }
 
+
+
 // Hover and Onfocus
 
 .user_info:focus {
-    box-shadow: 0px 2px 8px 1px #000;
+    border-bottom: 1px groove lightgreen;
+    
 }
 
 .btn:hover, .submit_btn:hover {
-    box-shadow: 5px 0px 10px rgb(82,174,94);
+    box-shadow: 5px 0px 10px #333;
+    
 }
 
 
