--- a/client/assets/stylesheets/_var.scss
+++ b/client/assets/stylesheets/_var.scss
@@ -1,3 +1,4 @@
-$formBackgroundColor : linear-gradient(to bottom right, rgb(91,220,223),rgb(116,119,236), rgb(234,120,254) );
+$formBackgroundColor : #fafafa;
 $submitButtonBackground : rgb(53, 66, 252);
 $headerBackground : rgb(32,52,93);
+$cardBackgroundColor : #fff;
