--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -64,6 +64,7 @@ button {
 body {
   font-family: 'Roboto', sans-serif;
   background: #F6F1DE;
+  line-height: 1.5;
 }
 
 .container {
@@ -72,7 +73,6 @@ body {
 }
 
 .header {
-  height: 60px;
   background-color: #20345d;
 }
 
@@ -88,10 +88,36 @@ body {
           align-items: center;
 }
 
+.btn {
+  display: inline-block;
+  padding: 5px 15px;
+  border-radius: 3px;
+  outline: 0;
+  border-width: 0px;
+  color: midnightblue;
+  font-weight: bold;
+  background-color: #fff;
+}
+
+.logo {
+  color: blanchedalmond;
+  text-transform: uppercase;
+  font-size: 28px;
+  padding: 20px;
+}
+
+.heading {
+  text-align: center;
+  font-size: 25px;
+  padding: 20px 0;
+}
+
 .menu_flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -102,7 +128,31 @@ body {
 .menu_items {
   margin-left: 40px;
   color: blanchedalmond;
-  padding-top: 20px;
+  padding: 20px;
+}
+
+.status_color_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.status_color {
+  padding: 5px 0px;
+  background-color: green;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
+  margin: 0 3px;
+}
+
+#water_issue_toggle, #washing_issue_toggle, #electricity_issue_toggle, #food_issue_toggle {
+  display: none;
 }
 
 .user_info {
@@ -125,24 +175,6 @@ body {
   font-size: 28px;
 }
 
-.btn {
-  display: inline-block;
-  padding: 5px 15px;
-  border-radius: 3px;
-  outline: 0;
-  border-width: 0px;
-  color: midnightblue;
-  font-weight: bold;
-  background-color: #fff;
-}
-
-.logo {
-  color: blanchedalmond;
-  text-transform: uppercase;
-  font-size: 28px;
-  padding-top: 20px;
-}
-
 .submit_btn {
   padding: 8px 20px;
   border-radius: 4px;
@@ -161,8 +193,7 @@ body {
   right: 50%;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
-  background: -webkit-gradient(linear, left top, right bottom, from(#5bdcdf), color-stop(#7477ec), to(#ea78fe));
-  background: linear-gradient(to bottom right, #5bdcdf, #7477ec, #ea78fe);
+  background: #fafafa;
   padding: 50px 60px;
   border-radius: 5px;
   -webkit-box-shadow: 2px 2px 10px #000000;
@@ -206,12 +237,344 @@ body {
 }
 
 .user_info:focus {
-  -webkit-box-shadow: 0px 2px 8px 1px #000;
-          box-shadow: 0px 2px 8px 1px #000;
+  border-bottom: 1px groove lightgreen;
 }
 
 .btn:hover, .submit_btn:hover {
-  -webkit-box-shadow: 5px 0px 10px #52ae5e;
-          box-shadow: 5px 0px 10px #52ae5e;
+  -webkit-box-shadow: 5px 0px 10px #333;
+          box-shadow: 5px 0px 10px #333;
+}
+
+.issue_form {
+  width: 33%;
+}
+
+.issue_form .user_info {
+  width: 95%;
+  font-size: 1.25rem;
+  margin: 2.5rem 0;
+}
+
+.issue_form .user_info:first-child {
+  font-size: 2.375px;
+}
+
+.dropdown_btn option {
+  background-color: #f0eccc;
+}
+
+.add_tag_wrapper .dropdown_btn {
+  width: 100%;
+  text-align: center;
+}
+
+.issue_form .submit_btn {
+  width: 25%;
+  margin-top: 3.75rem;
+  position: relative;
+  text-align: center;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.tags {
+  display: none;
+}
+
+.tag_label {
+  padding: 0.625rem 0.9375rem;
+  border-radius: 0.125rem;
+  -webkit-box-shadow: 0.0625rem 0px 0.1875rem 0 #000;
+          box-shadow: 0.0625rem 0px 0.1875rem 0 #000;
+}
+
+#tag_toggle {
+  display: none;
+}
+
+#tag_toggle:checked ~ .tags {
+  display: block;
+}
+
+@media all and (max-width: 768px) {
+  body {
+    font-size: 4px;
+  }
+  .issue_form {
+    width: 55%;
+    padding: 0 1rem;
+    margin: 0;
+  }
+  select {
+    width: 8rem;
+  }
+  .submit_btn, .select_issue {
+    font-size: 0.5rem;
+    padding: 0.5rem;
+  }
+}
+
+.cards {
+  max-width: 43.75rem;
+  margin: 8rem auto;
+  border-radius: 0.1rem;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0.03rem 0.1875rem #ccc;
+          box-shadow: 0px 0.03rem 0.1875rem #ccc;
+  padding: 0.625rem 1.57rem;
+}
+
+.card_title {
+  padding: 0.625rem 0;
+}
+
+.card_tag_flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.card_tags {
+  -ms-flex-preferred-size: 12%;
+      flex-basis: 12%;
+  margin: 1%;
+  padding: 0.1%;
+  background-color: #fafafa;
+  text-align: center;
+  -webkit-box-shadow: 0rem 0rem 0.157rem #333;
+          box-shadow: 0rem 0rem 0.157rem #333;
+}
+
+.card_username {
+  font-size: 1.01rem;
+  background-color: white;
+  text-transform: lowercase;
+  padding-top: 0.625rem;
+}
+
+.card_title {
+  font-size: 1.2rem;
+  font-weight: 450;
+  padding: 0.5rem 0rem 0.8rem 0;
+}
+
+.right {
+  -ms-flex-preferred-size: 15%;
+      flex-basis: 15%;
+  text-align: center;
+  padding-top: 1.5625rem;
+  padding-left: 1.5625rem;
+  padding-right: 1.5625rem;
+  background-color: #fafafa;
+}
+
+.card_infos {
+  padding: 0.5rem 1.1rem;
+}
+
+.due_by {
+  padding-bottom: 1rem;
+}
+
+.card_infos, .due_by, .create_date, .status_color {
+  font-size: 1rem;
+}
+
+.feed_dropdown {
+  position: absolute;
+  right: 20%;
+  top: 20%;
+}
+
+.issue_list {
+  width: 200%;
+  padding: 0.5rem 0;
+  outline: 0;
+}
+
+.status_color {
+  -ms-flex-preferred-size: 15%;
+      flex-basis: 15%;
+  text-align: center;
+  border-radius: 0.6rem;
+  font-size: 0.7rem;
+  color: #fff;
+}
+
+.create_date, .due_by {
+  font-size: 0.8rem;
+  margin-right: 1.5rem;
+}
+
+.create_date, .due_by, .card_info, .status_color {
+  margin-top: 1rem;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.dropdown_btn {
+  cursor: pointer;
+  outline: 0;
+  padding: 6px 25px;
+  background-color: #cec7c7;
+  border-radius: 2.5px;
+}
+
+.arrow_down {
+  margin-left: 1.2rem;
+  font-size: 1.2rem;
+  padding: 0.1rem;
+}
+
+.issue_dropdown {
+  display: none;
+}
+
+#toggle_issuelist {
+  display: none;
+}
+
+#toggle_issuelist:checked ~ .issue_dropdown {
+  display: block;
+  text-align: center;
+  font-size: 1rem;
+}
+
+.feed_issue_list {
+  padding: 0.08rem 0;
+  border-bottom: 0.5px dotted #000;
+  background-color: honeydew;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.feed_issue_list:last-child {
+  border-bottom-width: 0;
+}
+
+@media all and (max-width: 784px) {
+  body {
+    font-size: 8px;
+  }
+  .cards {
+    max-width: 20rem;
+    margin-top: 10rem;
+  }
+  .status {
+    display: none;
+  }
+  .status_color {
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    text-align: center;
+    border-radius: 0.5rem;
+    font-size: 0.4rem;
+    color: #fff;
+  }
+  .feed_dropdown {
+    position: absolute;
+    right: 15%;
+    top: 25%;
+  }
+  .feed_dropdown, .dropdown_btn {
+    width: 7rem;
+    text-align: center;
+  }
+}
+
+@media all and (min-width: 760px) and (max-width: 1024px) {
+  body {
+    font-size: 8px;
+  }
+  .cards {
+    max-width: 40rem;
+    margin-top: 10%;
+  }
+  .status {
+    display: none;
+  }
+  .status_color {
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    text-align: center;
+    border-radius: 0.5rem;
+    font-size: 0.4rem;
+    color: #fff;
+  }
+  .issue_list {
+    width: 10%;
+  }
+  .feed_dropdown {
+    position: absolute;
+    right: 20%;
+    top: 10%;
+  }
+  .feed_dropdown, .dropdown_btn {
+    width: 7rem;
+    text-align: center;
+  }
+}
+
+.desc_card_wrapper {
+  padding: 1.5rem 2rem;
+}
+
+.desc_card_username {
+  font-size: 1.25rem;
+}
+
+.desc_card_title {
+  font-size: 1.8rem;
+  font-weight: 100;
+  padding: 2rem 0;
+}
+
+.desc_card_para {
+  font-weight: 1.01rem;
+  padding-bottom: 2rem;
+}
+
+.desc_card_info {
+  font-size: 1.30rem;
+}
+
+.desc_create_date {
+  font-size: 1rem;
+}
+
+.review {
+  width: 41%;
+  outline: 0;
+  position: relative;
+  left: 28%;
+  bottom: 5rem;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 6px;
+  resize: none;
+  border: 1px solid lightgray;
+  background-color: #fafafa;
+}
+
+.desc_submit_btn {
+  width: 10%;
+  position: relative;
+  bottom: 3rem;
+  left: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
